hotfix/ smaller resolutions

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </li>
 
                     <li class="example__item">
-                        <h3 class="example__title">Around the U.S.A App</h3>
+                        <h3 class="example__title">Around the U.S.</h3>
                         <div class="example__link">
                             <iframe class="example__iframe" src="https://jajjer.github.io/web_project_4/"></iframe>
                         </div>
