--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
                     </li>
 
                     <li class="example__item">
+                        <h3 class="example__title">Learning to Learn</h3>
+                        <div class="example__link">
+                            <iframe class="example__iframe" src="https://jajjer.github.io/web_project_1/"></iframe>
+                        </div>
+                        <p class="example__description">The first website I made using HTML & CSS.</p>
+                        <div class="example__github">
+                            <div class="example__github-image"></div>
+                            <a class="example__github-link" href="https://github.com/jajjer/web_project_1">github.com/jajjer/web_project_1</a>
+                        </div>
+                        <div class="example__website">
+                            <div class="example__website-image"></div>
+                            <a class="example__website-link" href="https://jajjer.github.io/web_project_1/" target="_blank">jajjer.github.io/web_project_1/</a>
+                        </div>
+                    </li>
+
+                    <li class="example__item">
                         <h3 class="example__title">Full Boar BBQ Sauce</h3>
                         <img src="images/FullBoar.png" class="example__image" alt="Full Boar BBQ Sauce website">
                         <p class="example__description">This is a website that I created using Shopify.</p>
