feature/ To Do List

--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
             <section class="examples">
                 <h3 class="examples__title">Work Examples</h3>
                 <ul class="example">
+
+                    <li class="example__item">
+                        <h3 class="example__title">To Do List</h3>
+                        <div class="example__link">
+                            <iframe class="example__iframe" src="https://jajjer.github.io/to-do-list/"></iframe>
+                        </div>
+                        <p class="example__description">A To Do List that I created using React JS.</p>
+                        <div class="example__github">
+                            <div class="example__github-image"></div>
+                            <a class="example__github-link" href="https://github.com/jajjer/to-do-list">github.com/jajjer/to-do-list</a>
+                        </div>
+                        <div class="example__website">
+                            <div class="example__website-image"></div>
+                            <a class="example__website-link" href="https://jajjer.github.io/to-do-list/" target="_blank">jajjer.github.io/to-do-list/</a>
+                        </div>
+                    </li>
+
                     <li class="example__item">
                         <h3 class="example__title">Weezer Video Game</h3>
                         <div class="example__link">
