--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
                 <ul class="example">
 
                     <li class="example__item">
+                        <h3 class="example__title">Javascript Clock</h3>
+                        <div class="example__link">
+                            <iframe class="example__iframe" src="https://jajjer.github.io/clock/"></iframe>
+                        </div>
+                        <p class="example__description">A clock UI I made using Javascript.</p>
+                        <div class="example__github">
+                            <div class="example__github-image"></div>
+                            <a class="example__github-link" href="https://github.com/jajjer/clock">github.com/jajjer/clock</a>
+                        </div>
+                        <div class="example__website">
+                            <div class="example__website-image"></div>
+                            <a class="example__website-link" href="https://jajjer.github.io/clock/" target="_blank">jajjer.github.io/clock/</a>
+                        </div>
+                    </li>
+
+                    <li class="example__item">
                         <h3 class="example__title">To Do List</h3>
                         <div class="example__link">
                             <iframe class="example__iframe" src="https://jajjer.github.io/to-do-list/"></iframe>
@@ -52,9 +68,7 @@
                     <li class="example__item">
                         <h3 class="example__title">Weezer Video Game</h3>
                         <div class="example__link">
-                            <video class="example__video" poster="posterBG" autoplay muted loop>
-                                <source src="videos/Weezer.mov" type="video/mp4">
-                            </video>
+                            <img src="images/weezer.png" alt="weezer video game" class="example__iframe">
                         </div>
                         <p class="example__description">This is a simple Weezer themed video game that I made in JavaScript.
                         </p>
@@ -89,7 +103,7 @@
                         <div class="example__link">
                             <iframe class="example__iframe" src="https://jajjer.github.io/web_project_3/#"></iframe>
                         </div>
-                        <p class="example__description">This is a website that I created using HTML and CSS. Particularly CSS Grid, media queries, and </p>
+                        <p class="example__description">This is a website that I created using HTML and CSS. Particularly CSS Grid, media queries, and animations.</p>
                         <div class="example__github">
                             <div class="example__github-image"></div>
                             <a class="example__github-link" href="https://github.com/jajjer/web_project_3">github.com/jajjer/web_project_3</a>
@@ -146,12 +160,12 @@
 
                     <li class="language__item">
                         <p class="language__name">JavaScript</p>
-                        <div class="language__bar language__bar_size_m"></div>
+                        <div class="language__bar language__bar_size_l"></div>
                     </li>
 
                     <li class="language__item">
                         <p class="language__name">React JS</p>
-                        <div class="language__bar language__bar_size_s"></div>
+                        <div class="language__bar language__bar_size_m"></div>
                     </li>
 
                     <li class="language__item">
@@ -188,6 +202,10 @@
             <nav class="footer__links">
                 <ul class="footer__social">
                     <li class="footer__item">
+                        <img src="images/email.png" class="footer__image" alt="Email logo">
+                        <a class="footer__link" href="mailto:jaj.jacob.jensen@gmail.com" target="_blank">Email</a>
+                    </li>
+                    <li class="footer__item">
                         <img src="images/linkedin.png" class="footer__image" alt="LinkedIn logo">
                         <a class="footer__link" href="https://www.linkedin.com/in/jacob-jensen-957958135/" target="_blank">LinkedIn</a>
                     </li>
@@ -200,5 +218,6 @@
         </footer>
     </div>
 </body>
+<script></script>
 
 </html>
