--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <div class="about__bio">
                     <div class="about__image"></div>
                     <div class="about__text">
-                        <p class="about__paragraph">Hello, world! My name's Jacob and I'm a Front End Developer. I'm currently completing the Software Engineering course through Practicum by Yandex (Russian Google). I have a bachelors degree in Psychology and a background in film
-                            production. I love combining my skills to make unique user experiences!</p>
+                        <p class="about__paragraph">Hello, world! My name's Jacob, I'm a Front End Developer and Certified Scrum Master. I'm currently completing an intensive Web Development course through Practicum by Yandex. I have a bachelors degree in Psychology and a background
+                            in film production. I love combining my skills to make unique user experiences!</p>
 
-                        <p class="about__paragraph">I am currently working on improving my React JS and Python skills. Everyday I strive to learn more about coding and make new content. I am looking for my first job in Front End Development. Let's make something meaningful!</p>
+                        <p class="about__paragraph">I am currently working on improving my React JS and Python skills. Everyday I strive to learn more about coding and make new content. I am available for freelance/ contract opportunities. Let's make something meaningful!</p>
                     </div>
                 </div>
             </section>
@@ -171,6 +171,11 @@
                     <li class="language__item">
                         <p class="language__name">Python</p>
                         <div class="language__bar language__bar_size_s"></div>
+                    </li>
+
+                    <li class="language__item">
+                        <p class="language__name">Scrum</p>
+                        <div class="language__bar"></div>
                     </li>
 
                     <li class="language__item">
